# stm32f429-jumpgame

./: .gitignore  CMakeLists.txt  README.md
app/: main.c  stm32f4xx_it.c
cmake/: arm-none-eabi.cmake
linker/: stm32f429zi.ld
scripts/: setup-vendor.ps1  setup-vendor.sh
